Horizontal scroll bugfix

--- a/public/style.css
+++ b/public/style.css
@@ -15,10 +15,13 @@
 
 }
 
-body {
+html {
 	color: rgb(var(--text-color));
 	background-color: rgb(var(--bg-color));
 	font-family: Cantarell, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+html, body {
 	overflow-x: hidden;
 	line-height: 1.15;
 	margin: 0;
